{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 608,
  "lineage": "db6fcc73-3e33-4481-4213-9121696d87de",
  "resources": [
    {
      "module": "module.apigateway",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:security-group/sg-0cbdce4bb5ccb7aa2",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbdce4bb5ccb7aa2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "470624541268",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tp3"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:internet-gateway/igw-083446e089863bd42",
            "id": "igw-083446e089863bd42",
            "owner_id": "470624541268",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tp3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:route-table/rtb-040914ecca560494f",
            "id": "rtb-040914ecca560494f",
            "owner_id": "470624541268",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083446e089863bd42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_0"
            },
            "tags_all": {
              "Name": "public_0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tp3",
            "module.vpc.aws_vpc.tp3"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:route-table/rtb-03df9d9d068bb450b",
            "id": "rtb-03df9d9d068bb450b",
            "owner_id": "470624541268",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083446e089863bd42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_1"
            },
            "tags_all": {
              "Name": "public_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tp3",
            "module.vpc.aws_vpc.tp3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c09aeb4d1a68405",
            "route_table_id": "rtb-040914ecca560494f",
            "subnet_id": "subnet-03450c8a0562cf28b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tp3",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.tp3",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d812fffb022c8da",
            "route_table_id": "rtb-03df9d9d068bb450b",
            "subnet_id": "subnet-0a5490431699d90df"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tp3",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.tp3",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:subnet/subnet-0fbd4642ed92aad04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbd4642ed92aad04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "470624541268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1"
            },
            "tags_all": {
              "Name": "private_1"
            },
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tp3",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:subnet/subnet-004b4e3bf283b33ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004b4e3bf283b33ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "470624541268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_2"
            },
            "tags_all": {
              "Name": "private_2"
            },
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tp3",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:subnet/subnet-03450c8a0562cf28b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03450c8a0562cf28b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470624541268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1"
            },
            "tags_all": {
              "Name": "public_1"
            },
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tp3",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:subnet/subnet-0a5490431699d90df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5490431699d90df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470624541268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_2"
            },
            "tags_all": {
              "Name": "public_2"
            },
            "vpc_id": "vpc-0ea27ad228cb585a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tp3",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470624541268:vpc/vpc-0ea27ad228cb585a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1da277b7bac9c1f",
            "default_route_table_id": "rtb-0547d001b89a66973",
            "default_security_group_id": "sg-0cbdce4bb5ccb7aa2",
            "dhcp_options_id": "dopt-0c56a92c735bdcbb5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ea27ad228cb585a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0547d001b89a66973",
            "owner_id": "470624541268",
            "tags": {
              "name": "vpc"
            },
            "tags_all": {
              "name": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}